trello implementaciones y fixes

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -23,7 +23,7 @@
     <!-- SCREEN STYLES -->
     <link href="/styles/screen.css" rel="stylesheet" media="screen,projection">
     <link href="/bower_components/angular-ui-select/dist/select.min.css" rel="stylesheet" media="screen,projection">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <!--FONTAWESOME-->
     <link rel="stylesheet" href="/bower_components/components-font-awesome/css/fontawesome-all.min.css"/>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
