--- a/app/src/index.html
+++ b/app/src/index.html
@@ -121,6 +121,7 @@
 <script type="text/javascript" src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
 <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
 <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.js"></script>
+<script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar/locale-all.js"></script>
 <script type="application/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script src='fullcalendar/main.js'></script>
 <script type="application/javascript">
