Calendario Version Agosto

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -25,6 +25,8 @@
     <script type="text/javascript" src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
     <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <link href="//cdn.rawgit.com/indrimuska/angular-moment-picker/master/dist/themes/material-ui.min.css" rel="stylesheet">
+
 
     <!-- TYPOGRAPHY -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Sanchez" rel="stylesheet">
@@ -123,6 +125,7 @@
 <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.js"></script>
 <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar/locale-all.js"></script>
 <script type="application/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+
 <script src='fullcalendar/main.js'></script>
 <script type="application/javascript">
     moment.locale('es');  // Set the default/global locale
