--- a/app/src/index.html
+++ b/app/src/index.html
@@ -17,16 +17,11 @@
     </style>
 
     <!-- CALENDAR -->
-    <link href='fullcalendar/main.css' rel='stylesheet' />
-    <link rel="stylesheet" href="/bower_components/fullcalendar/dist/fullcalendar.css">
-    <link rel="stylesheet" href="/bower_components/bootstrap-css/css/bootstrap.css" />
-    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
-
-    <script type="text/javascript" src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
-    <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
-    <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
     <link href="//cdn.rawgit.com/indrimuska/angular-moment-picker/master/dist/themes/material-ui.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="/bower_components/components-font-awesome/css/fontawesome.min.css"/>
+    <link rel="stylesheet" href="/bower_components/fullcalendar/dist/fullcalendar.css">
+    <link rel="stylesheet" src="/bower_components/bootstrap-css/css/bootstrap.css" />
+    <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- TYPOGRAPHY -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Sanchez" rel="stylesheet">
@@ -37,7 +32,7 @@
     <link href="/bower_components/angular-ui-select/dist/select.min.css" rel="stylesheet" media="screen,projection">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <!--FONTAWESOME-->
-    <link rel="stylesheet" href="/bower_components/components-font-awesome/css/fontawesome-all.min.css"/>
+    <!-- <link rel="stylesheet" href="/bower_components/components-font-awesome/css/fontawesome-all.min.css"/> -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
     <!-- <link rel="stylesheet" href="lib/dhtmlxgantt.css"> -->
@@ -121,12 +116,9 @@
 <script src="/bower_components/angular-base64-upload/dist/angular-base64-upload.min.js"></script>
 <script src="/bower_components/angular-wizard/dist/angular-wizard.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
-<script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
 <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.js"></script>
-<script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar/locale-all.js"></script>
 <script type="application/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
 
-<script src='fullcalendar/main.js'></script>
 <script type="application/javascript">
     moment.locale('es');  // Set the default/global locale
 </script>
