--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,7 +26,7 @@
     <!-- TYPOGRAPHY -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Sanchez" rel="stylesheet">
     <!-- COMPONENT STYLES -->
-
+    <link rel="stylesheet" href="/bower_components/angular-toastr/dist/angular-toastr.min.css" />
     <!-- SCREEN STYLES -->
     <link href="/styles/screen.css" rel="stylesheet" media="screen,projection">
     <link href="/bower_components/angular-ui-select/dist/select.min.css" rel="stylesheet" media="screen,projection">
@@ -116,9 +116,9 @@
 <script src="/bower_components/angular-base64-upload/dist/angular-base64-upload.min.js"></script>
 <script src="/bower_components/angular-wizard/dist/angular-wizard.min.js"></script>
 <script type="text/javascript" src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
+<script src="/bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
 <script type="text/javascript" src="/bower_components/fullcalendar/dist/fullcalendar.js"></script>
 <script type="application/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
-
 <script type="application/javascript">
     moment.locale('es');  // Set the default/global locale
 </script>
