--- a/app/src/index.html
+++ b/app/src/index.html
@@ -57,7 +57,8 @@
     <link rel="stylesheet" href="/bower_components/textAngular/dist/textAngular.css">
 </head>
 
-<body ng-controller="AppCtrl" ng-cloak>
+<!-- <body ng-controller="AppCtrl" ng-class="{'dark-mode' : darkMode == 1, 'light-mode' : darkMode != 1}" ng-cloak> -->
+<body ng-controller="AppCtrl" class="dark-mode" ng-cloak></body>
 
 <!--div style="position:absolute;width:0;height:0;visibility:hidden">
  build include ../dist/assets/images/symbol/svg/sprite.symbol.svg
