--- a/app/src/index.html
+++ b/app/src/index.html
@@ -54,7 +54,7 @@
 
     <!-- FAVICONS -->
     <link rel="icon" href="/assets/favicon/favicon.ico">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#F9F9F9">
 
     <link rel="stylesheet" href="/bower_components/textAngular/dist/textAngular.css">
 </head>
