--- a/app/src/less/fonts/icons.html
+++ b/app/src/less/fonts/icons.html
@@ -7,7 +7,7 @@
 		body {
 			margin:0;
 			padding:10px 20px;
-			background:#fff;
+			background:#F9F9F9;
 			color:#222;
 			}
 		h1, div, footer {
