--- a/app/src/less/fonts/icons.html
+++ b/app/src/less/fonts/icons.html
@@ -274,7 +274,7 @@
 			
 				<div class="icons__item" data-name="close-big-ico"><i class="lexart-icon lexart-icon--close-big-ico"></i> lexart-icon--close-big-ico</div>
 			
-				<div class="icons__item" data-name="close-modal"><i class="lexart-icon lexart-icon--close-modal"></i> lexart-icon--close-modal</div>
+				<div class="icons__item" data-name="close-modal"><i class="ri-close-line"></i> lexart-icon--close-modal</div>
 			
 				<div class="icons__item" data-name="close-session"><i class="lexart-icon lexart-icon--close-session"></i> lexart-icon--close-session</div>
 			
